; ModuleID = '/home/carl/AnghaBench/git/extr_attr.c_check_vector_remove.c'
source_filename = "/home/carl/AnghaBench/git/extr_attr.c_check_vector_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, %struct.attr_check** }
%struct.attr_check = type { i32 }

@check_vector = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [15 x i8] c"no entry found\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.attr_check*)* @check_vector_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_vector_remove(%struct.attr_check* %0) #0 {
  %2 = alloca %struct.attr_check*, align 8
  %3 = alloca i32, align 4
  store %struct.attr_check* %0, %struct.attr_check** %2, align 8
  %4 = call i32 (...) @vector_lock()
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %19, %1
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 0), align 8
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %22

9:                                                ; preds = %5
  %10 = load %struct.attr_check**, %struct.attr_check*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 1), align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.attr_check*, %struct.attr_check** %10, i64 %12
  %14 = load %struct.attr_check*, %struct.attr_check** %13, align 8
  %15 = load %struct.attr_check*, %struct.attr_check** %2, align 8
  %16 = icmp eq %struct.attr_check* %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %9
  br label %22

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %5

22:                                               ; preds = %17, %5
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 0), align 8
  %25 = icmp sge i32 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = call i32 @BUG(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %28

28:                                               ; preds = %26, %22
  br label %29

29:                                               ; preds = %45, %28
  %30 = load i32, i32* %3, align 4
  %31 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 0), align 8
  %32 = sub nsw i32 %31, 1
  %33 = icmp slt i32 %30, %32
  br i1 %33, label %34, label %48

34:                                               ; preds = %29
  %35 = load %struct.attr_check**, %struct.attr_check*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 1), align 8
  %36 = load i32, i32* %3, align 4
  %37 = add nsw i32 %36, 1
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.attr_check*, %struct.attr_check** %35, i64 %38
  %40 = load %struct.attr_check*, %struct.attr_check** %39, align 8
  %41 = load %struct.attr_check**, %struct.attr_check*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 1), align 8
  %42 = load i32, i32* %3, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds %struct.attr_check*, %struct.attr_check** %41, i64 %43
  store %struct.attr_check* %40, %struct.attr_check** %44, align 8
  br label %45

45:                                               ; preds = %34
  %46 = load i32, i32* %3, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %3, align 4
  br label %29

48:                                               ; preds = %29
  %49 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 0), align 8
  %50 = add nsw i32 %49, -1
  store i32 %50, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @check_vector, i32 0, i32 0), align 8
  %51 = call i32 (...) @vector_unlock()
  ret void
}

declare dso_local i32 @vector_lock(...) #1

declare dso_local i32 @BUG(i8*) #1

declare dso_local i32 @vector_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
